--- a/drag.html
+++ b/drag.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>拖拽</title>
+    <title>drag</title>
     <style>
         div{display: block;width: 100px;height: 100px;  background: skyblue;
             position: fixed;
@@ -10,18 +10,16 @@
             top: 0;
             text-align: center; line-height: 100px; color: #fff; font-weight: bold; }
     </style>
-
 </head>
 <body>
-<p>
-    拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽
-    拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽
-    拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽
-    拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽
-    拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽
-    拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽拖拽
-</p>
-<div></div>
-<script src="drag.js"></script>
+荒草离离 不知何意 荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意荒草离离
+不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意
+不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意
+不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意荒草离离 不知何意
+<div>drag drop</div>
+
+<script src="5event.js"></script>
+<script src="5drag.js"></script>
+
 </body>
 </html>
